example/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27, 31, 35, 0.05);
  border-radius: 6px;
}

.text-slide {
  padding: 1rem 50px;
}

.vertical-separator {
  margin: 1em 0;
}

.carousel-page {
  max-width: 1200px;
  margin: 0 auto;
  overflow: hidden;
}

.carousel-page-header-container {
  width: 100%;
}

.carousel-page-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 1em;
}

.action-container {
  padding: 0 1em;
}

.star-button-container {
  margin-bottom: 10px;
}

.section {
  margin-bottom: 60px;
}

.section-header {
  padding: 0 1em;
}

.carousel-container {
  width: 100%;
  height: calc(100vw * 0.8);
}

@media only screen and (min-width: 500px) and (max-width: 1280px) {
  .carousel-container {
    height: calc(100vw * 0.6);
    max-height: 768px;
  }
}

@media only screen and (min-width: 1280px) {
  .carousel-container {
    height: 768px;
  }
}

.carousel-container.short {
  height: 300px;
}

.framed-carousel {
  border: 5px solid #eee;
  overflow: hidden;
  border-radius: 10px;
  will-change: transform;
  mask-image: -webkit-radial-gradient(white, black);
  box-sizing: border-box;
}

.icon-text {
  color: white;
}

